feat: add font renderer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=2.0" />
         <title>High performance chart</title>
         <link rel="stylesheet" href="./src/style.css" />
     </head>
@@ -28,6 +28,22 @@
             <div class="sample">
                 <iframe src="/samples/fixed-size/index.html"></iframe>
                 <div class="explanation">Fixed size primitive</div>
+            </div>
+            <div class="sample">
+                <iframe src="/samples/font/index.html"></iframe>
+                <div class="explanation">Font (Inter)</div>
+            </div>
+            <div class="sample">
+                <iframe src="/samples/font-jetbrains-mono/index.html"></iframe>
+                <div class="explanation">Font (JetBrainsMono-Regular)</div>
+            </div>
+            <div class="sample">
+                <iframe src="/samples/font-jetbrains-mono-thin/index.html"></iframe>
+                <div class="explanation">Font (JetBrainsMono-Thin)</div>
+            </div>
+            <div class="sample">
+                <iframe src="/samples/font-jetbrains-mono-bold/index.html"></iframe>
+                <div class="explanation">Font (JetBrainsMono-Bold)</div>
             </div>
         </section>
     </body>
