--- a/web-gpu-experiments/index.html
+++ b/web-gpu-experiments/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/web-gpu-experiments/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=2.0" />
     <title>High performance chart</title>
-    <link rel="stylesheet" href="./src/style.css" />
+    <link rel="stylesheet" crossorigin href="/web-gpu-experiments/assets/style-DQpEZgvk.css">
   </head>
   <body>
     <section class="sample-layout">
