--- a/index.html
+++ b/index.html
@@ -10,43 +10,61 @@
   <body>
     <section class="sample-layout">
       <div class="sample">
-        <iframe src="./samples/plain-triangle/index.html"></iframe>
+        <iframe
+          src="/web-gpu-experiments/samples/plain-triangle/index.html"
+        ></iframe>
         <div class="explanation">Plain render</div>
       </div>
       <div class="sample">
-        <iframe src="./samples/external-data/index.html"></iframe>
+        <iframe
+          src="/web-gpu-experiments/samples/external-data/index.html"
+        ></iframe>
         <div class="explanation">Send data points to shader</div>
       </div>
       <div class="sample">
-        <iframe src="./samples/top-left-coord-system/index.html"></iframe>
+        <iframe
+          src="/web-gpu-experiments/samples/top-left-coord-system/index.html"
+        ></iframe>
         <div class="explanation">Coord. system from top-left</div>
       </div>
       <div class="sample">
-        <iframe src="./samples/bottom-left-coord-system/index.html"></iframe>
+        <iframe
+          src="/web-gpu-experiments/samples/bottom-left-coord-system/index.html"
+        ></iframe>
         <div class="explanation">Coord. system from bottom-left</div>
       </div>
       <div class="sample">
-        <iframe src="./samples/fixed-size/index.html"></iframe>
+        <iframe
+          src="/web-gpu-experiments/samples/fixed-size/index.html"
+        ></iframe>
         <div class="explanation">Fixed size primitive</div>
       </div>
       <div class="sample">
-        <iframe src="./samples/font/index.html"></iframe>
+        <iframe src="/web-gpu-experiments/samples/font/index.html"></iframe>
         <div class="explanation">Font (Inter)</div>
       </div>
       <div class="sample">
-        <iframe src="./samples/font-jetbrains-mono/index.html"></iframe>
+        <iframe
+          src="/web-gpu-experiments/samples/font-jetbrains-mono/index.html"
+        ></iframe>
         <div class="explanation">Font (JetBrainsMono-Regular)</div>
       </div>
       <div class="sample">
-        <iframe src="./samples/font-jetbrains-mono-thin/index.html"></iframe>
+        <iframe
+          src="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html"
+        ></iframe>
         <div class="explanation">Font (JetBrainsMono-Thin)</div>
       </div>
       <div class="sample">
-        <iframe src="./samples/font-jetbrains-mono-bold/index.html"></iframe>
+        <iframe
+          src="/web-gpu-experiments/samples/font-jetbrains-mono-bold/index.html"
+        ></iframe>
         <div class="explanation">Font (JetBrainsMono-Bold)</div>
       </div>
       <div class="sample">
-        <iframe src="./samples/font-and-backgroud-colors/index.html"></iframe>
+        <iframe
+          src="/web-gpu-experiments/samples/font-and-backgroud-colors/index.html"
+        ></iframe>
         <div class="explanation">Font, background colors</div>
       </div>
     </section>
