--- a/web-gpu-experiments/samples/external-data/index.html
+++ b/web-gpu-experiments/samples/external-data/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/web-gpu-experiments/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>High performance chart</title>
-    <script type="module" crossorigin src="/web-gpu-experiments/assets/external-data-Dm-WmxMV.js"></script>
-    <link rel="modulepreload" crossorigin href="/web-gpu-experiments/assets/Chart-Dhms8Wuz.js">
-    <link rel="modulepreload" crossorigin href="/web-gpu-experiments/assets/line-strip.pipeline-CD_QxH-7.js">
+    <script type="module" crossorigin src="/web-gpu-experiments/assets/external-data-CaRVNRr4.js"></script>
+    <link rel="modulepreload" crossorigin href="/web-gpu-experiments/assets/Chart-DCOpHqw7.js">
+    <link rel="modulepreload" crossorigin href="/web-gpu-experiments/assets/line-strip.pipeline-BPR6n1Ti.js">
     <link rel="modulepreload" crossorigin href="/web-gpu-experiments/assets/makeVertexBufferAndLayout-Dy244HAi.js">
     <link rel="stylesheet" crossorigin href="/web-gpu-experiments/assets/style-DQpEZgvk.css">
   </head>
