--- a/samples/font-jetbrains-mono/index.html
+++ b/samples/font-jetbrains-mono/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>High performance chart</title>
-    <link rel="stylesheet" href="../../src/style.css" />
+    <link rel="stylesheet" href="../../public/styles/index.css" />
   </head>
   <body>
     <div class="chart-example">
