--- a/samples/rethink-high-level-api/index.html
+++ b/samples/rethink-high-level-api/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="chart-example">
-      <div class="chart" id="chart"></div>
+      <canvas class="chart" id="chart"></canvas>
     </div>
     <script type="module" src="./index.ts"></script>
   </body>
