Add code generation of pages index.html, search.html

--- a/output/index.html
+++ b/output/index.html
@@ -2,35 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=2.0" />
-    <title>High performance chart</title>
+    <title>Samples</title>
     <link rel="stylesheet" href="../public/styles/index.css" />
   </head>
   <body>
     <section class="sample-layout">
       <div class="sample">
-        <iframe src="/web-gpu-experiments/samples/plain-rectangle/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/plain-rectangle/index.html" target="_blank" class="explanation"
-          >Plain render</a
+        <iframe src="/web-gpu-experiments/samples/bottom-left-coord-system/index.html"></iframe>
+        <a href="/web-gpu-experiments/samples/bottom-left-coord-system/index.html" target="_blank" class="explanation"
+          >Coord. system from bottom-left</a
         >
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/external-data/index.html"></iframe>
         <a href="/web-gpu-experiments/samples/external-data/index.html" target="_blank" class="explanation"
           >Send data points to shader</a
-        >
-      </div>
-      <div class="sample">
-        <iframe src="/web-gpu-experiments/samples/top-left-coord-system/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/top-left-coord-system/index.html" target="_blank" class="explanation"
-          >Coord. system from top-left</a
-        >
-      </div>
-      <div class="sample">
-        <iframe src="/web-gpu-experiments/samples/bottom-left-coord-system/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/bottom-left-coord-system/index.html" target="_blank" class="explanation"
-          >Coord. system from bottom-left</a
         >
       </div>
       <div class="sample">
@@ -44,15 +31,15 @@
         <a href="/web-gpu-experiments/samples/font/index.html" target="_blank" class="explanation">Font (Inter)</a>
       </div>
       <div class="sample">
-        <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/font-jetbrains-mono/index.html" target="_blank" class="explanation"
-          >Font (JetBrainsMono-Regular)</a
+        <iframe src="/web-gpu-experiments/samples/font-and-backgroud-colors/index.html"></iframe>
+        <a href="/web-gpu-experiments/samples/font-and-backgroud-colors/index.html" target="_blank" class="explanation"
+          >Font, background colors</a
         >
       </div>
       <div class="sample">
-        <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html" target="_blank" class="explanation"
-          >Font (JetBrainsMono-Thin)</a
+        <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono/index.html"></iframe>
+        <a href="/web-gpu-experiments/samples/font-jetbrains-mono/index.html" target="_blank" class="explanation"
+          >Font (JetBrainsMono-Regular)</a
         >
       </div>
       <div class="sample">
@@ -62,15 +49,37 @@
         >
       </div>
       <div class="sample">
-        <iframe src="/web-gpu-experiments/samples/font-and-backgroud-colors/index.html"></iframe>
-        <a href="/web-gpu-experiments/samples/font-and-backgroud-colors/index.html" target="_blank" class="explanation"
-          >Font, background colors</a
+        <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html"></iframe>
+        <a href="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html" target="_blank" class="explanation"
+          >Font (JetBrainsMono-Thin)</a
         >
       </div>
       <div class="sample">
         <iframe src="/web-gpu-experiments/samples/lines-and-text/index.html"></iframe>
         <a href="/web-gpu-experiments/samples/lines-and-text/index.html" target="_blank" class="explanation"
           >Font, line, colors</a
+        >
+      </div>
+      <div class="sample">
+        <iframe src="/web-gpu-experiments/samples/msdf-font/index.html"></iframe>
+        <a href="/web-gpu-experiments/samples/msdf-font/index.html" target="_blank" class="explanation">MSDF font</a>
+      </div>
+      <div class="sample">
+        <iframe src="/web-gpu-experiments/samples/plain-rectangle/index.html"></iframe>
+        <a href="/web-gpu-experiments/samples/plain-rectangle/index.html" target="_blank" class="explanation"
+          >Plain render</a
+        >
+      </div>
+      <div class="sample">
+        <iframe src="/web-gpu-experiments/samples/rethink-high-level-api/index.html"></iframe>
+        <a href="/web-gpu-experiments/samples/rethink-high-level-api/index.html" target="_blank" class="explanation"
+          >Rethink high-level api</a
+        >
+      </div>
+      <div class="sample">
+        <iframe src="/web-gpu-experiments/samples/top-left-coord-system/index.html"></iframe>
+        <a href="/web-gpu-experiments/samples/top-left-coord-system/index.html" target="_blank" class="explanation"
+          >Coord. system from top-left</a
         >
       </div>
     </section>
