--- a/output/search.html
+++ b/output/search.html
@@ -52,10 +52,12 @@
           </form>
         </div>
         <div class="sample-layout">
-          <div class="sample" data-search="Plain render" style="display: flex">
-            <iframe src="/web-gpu-experiments/samples/plain-rectangle/index.html"></iframe>
+          <div class="sample" data-search="Coord. system from bottom-left" style="display: flex">
+            <iframe src="/web-gpu-experiments/samples/bottom-left-coord-system/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/plain-rectangle/index.html" target="_blank">Plain render</a>
+              <a href="/web-gpu-experiments/samples/bottom-left-coord-system/index.html" target="_blank"
+                >Coord. system from bottom-left</a
+              >
             </div>
           </div>
           <div class="sample" data-search="Send data points to shader" style="display: flex">
@@ -66,59 +68,19 @@
               >
             </div>
           </div>
-          <div class="sample" data-search="Coord. system from top-left" style="display: flex">
-            <iframe src="/web-gpu-experiments/samples/top-left-coord-system/index.html"></iframe>
-            <div class="explanation">
-              <a href="/web-gpu-experiments/samples/top-left-coord-system/index.html" target="_blank"
-                >Coord. system from top-left</a
-              >
-            </div>
-          </div>
-          <div class="sample" data-search="Coord. system from bottom-left">
-            <iframe src="/web-gpu-experiments/samples/bottom-left-coord-system/index.html"></iframe>
-            <div class="explanation">
-              <a href="/web-gpu-experiments/samples/bottom-left-coord-system/index.html" target="_blank"
-                >Coord. system from bottom-left</a
-              >
-            </div>
-          </div>
-          <div class="sample" data-search="Fixed size primitive">
+          <div class="sample" data-search="Fixed size primitive" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/fixed-size/index.html"></iframe>
             <div class="explanation">
               <a href="/web-gpu-experiments/samples/fixed-size/index.html" target="_blank">Fixed size primitive</a>
             </div>
           </div>
-          <div class="sample" data-search="Font (Inter)">
+          <div class="sample" data-search="Font (Inter)" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/font/index.html"></iframe>
             <div class="explanation">
               <a href="/web-gpu-experiments/samples/font/index.html" target="_blank">Font (Inter)</a>
             </div>
           </div>
-          <div class="sample" data-search="Font (JetBrainsMono-Regular)">
-            <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono/index.html"></iframe>
-            <div class="explanation">
-              <a href="/web-gpu-experiments/samples/font-jetbrains-mono/index.html" target="_blank"
-                >Font (JetBrainsMono-Regular)</a
-              >
-            </div>
-          </div>
-          <div class="sample" data-search="Font (JetBrainsMono-Thin)">
-            <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html"></iframe>
-            <div class="explanation">
-              <a href="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html" target="_blank"
-                >Font (JetBrainsMono-Thin)</a
-              >
-            </div>
-          </div>
-          <div class="sample" data-search="Font (JetBrainsMono-Bold)">
-            <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono-bold/index.html"></iframe>
-            <div class="explanation">
-              <a href="/web-gpu-experiments/samples/font-jetbrains-mono-bold/index.html" target="_blank"
-                >Font (JetBrainsMono-Bold)</a
-              >
-            </div>
-          </div>
-          <div class="sample" data-search="Font, background colors">
+          <div class="sample" data-search="Font, background colors" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/font-and-backgroud-colors/index.html"></iframe>
             <div class="explanation">
               <a href="/web-gpu-experiments/samples/font-and-backgroud-colors/index.html" target="_blank"
@@ -126,10 +88,62 @@
               >
             </div>
           </div>
-          <div class="sample" data-search="Font, line, colors">
+          <div class="sample" data-search="Font (JetBrainsMono-Regular)" style="display: flex">
+            <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono/index.html"></iframe>
+            <div class="explanation">
+              <a href="/web-gpu-experiments/samples/font-jetbrains-mono/index.html" target="_blank"
+                >Font (JetBrainsMono-Regular)</a
+              >
+            </div>
+          </div>
+          <div class="sample" data-search="Font (JetBrainsMono-Bold)" style="display: flex">
+            <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono-bold/index.html"></iframe>
+            <div class="explanation">
+              <a href="/web-gpu-experiments/samples/font-jetbrains-mono-bold/index.html" target="_blank"
+                >Font (JetBrainsMono-Bold)</a
+              >
+            </div>
+          </div>
+          <div class="sample" data-search="Font (JetBrainsMono-Thin)" style="display: flex">
+            <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html"></iframe>
+            <div class="explanation">
+              <a href="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html" target="_blank"
+                >Font (JetBrainsMono-Thin)</a
+              >
+            </div>
+          </div>
+          <div class="sample" data-search="Font, line, colors" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/lines-and-text/index.html"></iframe>
             <div class="explanation">
               <a href="/web-gpu-experiments/samples/lines-and-text/index.html" target="_blank">Font, line, colors</a>
+            </div>
+          </div>
+          <div class="sample" data-search="MSDF font" style="display: flex">
+            <iframe src="/web-gpu-experiments/samples/msdf-font/index.html"></iframe>
+            <div class="explanation">
+              <a href="/web-gpu-experiments/samples/msdf-font/index.html" target="_blank">MSDF font</a>
+            </div>
+          </div>
+          <div class="sample" data-search="Plain render" style="display: flex">
+            <iframe src="/web-gpu-experiments/samples/plain-rectangle/index.html"></iframe>
+            <div class="explanation">
+              <a href="/web-gpu-experiments/samples/plain-rectangle/index.html" target="_blank">Plain render</a>
+            </div>
+          </div>
+          <div class="sample" data-search="Rethink high-level api" style="display: flex">
+            <iframe src="/web-gpu-experiments/samples/rethink-high-level-api/index.html"></iframe>
+            <div class="explanation">
+              <a href="/web-gpu-experiments/samples/rethink-high-level-api/index.html" target="_blank"
+                >Rethink high-level api</a
+              >
+            </div>
+          </div>
+          <div class="sample" data-search="Coord. system from top-left" style="display: flex">
+            <iframe src="/web-gpu-experiments/samples/top-left-coord-system/index.html"></iframe>
+            <div class="explanation">
+              <a href="/web-gpu-experiments/samples/top-left-coord-system/index.html" target="_blank"
+                >Coord. system from top-left</a
+              >
             </div>
           </div>
         </div>
