--- a/samples/font-jetbrains-mono-bold/index.html
+++ b/samples/font-jetbrains-mono-bold/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>High performance chart</title>
-    <link rel="stylesheet" href="../../public/styles/index.css" />
+    <title>Font (JetBrainsMono-Bold)</title>
+    <link rel="stylesheet" href="../../public/styles/sample.css" />
   </head>
   <body>
-    <div class="chart-example">
-      <div class="chart" id="chart"></div>
+    <div class="sample-container">
+      <div class="sample" id="sample"></div>
     </div>
     <script type="module" src="./index.ts"></script>
   </body>
