--- a/samples/rethink-high-level-api/index.html
+++ b/samples/rethink-high-level-api/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>High performance chart</title>
-    <link rel="stylesheet" href="../../public/styles/index.css" />
+    <title>Rethink high-level api</title>
+    <link rel="stylesheet" href="../../public/styles/sample.css" />
+    <script src="index.ts"></script>
   </head>
   <body>
-    <div class="chart-example">
-      <canvas class="chart" id="chart"></canvas>
+    <div class="sample-container">
+      <canvas class="sample" id="sample"></canvas>
     </div>
     <script type="module" src="./index.ts"></script>
   </body>
