--- a/samples/msdf-font/index.html
+++ b/samples/msdf-font/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MSDF font</title>
     <link rel="stylesheet" href="../../public/styles/sample.css" />
+    <link rel="preload" as="image" href="/web-gpu-experiments/samples/msdf-font/font/basic-msdf/basic.png" />
   </head>
   <body>
     <div class="sample-container">
