--- a/output/search.html
+++ b/output/search.html
@@ -55,17 +55,13 @@
           <div class="sample" data-search="Coord. system from bottom-left" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/bottom-left-coord-system/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/bottom-left-coord-system/index.html" target="_blank"
-                >Coord. system from bottom-left</a
-              >
+              <a href="/web-gpu-experiments/samples/bottom-left-coord-system/index.html" target="_blank">Coord. system from bottom-left</a>
             </div>
           </div>
           <div class="sample" data-search="Send data points to shader" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/external-data/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/external-data/index.html" target="_blank"
-                >Send data points to shader</a
-              >
+              <a href="/web-gpu-experiments/samples/external-data/index.html" target="_blank">Send data points to shader</a>
             </div>
           </div>
           <div class="sample" data-search="Fixed size primitive" style="display: flex">
@@ -83,33 +79,25 @@
           <div class="sample" data-search="Font, background colors" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/font-and-backgroud-colors/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/font-and-backgroud-colors/index.html" target="_blank"
-                >Font, background colors</a
-              >
+              <a href="/web-gpu-experiments/samples/font-and-backgroud-colors/index.html" target="_blank">Font, background colors</a>
             </div>
           </div>
           <div class="sample" data-search="Font (JetBrainsMono-Regular)" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/font-jetbrains-mono/index.html" target="_blank"
-                >Font (JetBrainsMono-Regular)</a
-              >
+              <a href="/web-gpu-experiments/samples/font-jetbrains-mono/index.html" target="_blank">Font (JetBrainsMono-Regular)</a>
             </div>
           </div>
           <div class="sample" data-search="Font (JetBrainsMono-Bold)" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono-bold/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/font-jetbrains-mono-bold/index.html" target="_blank"
-                >Font (JetBrainsMono-Bold)</a
-              >
+              <a href="/web-gpu-experiments/samples/font-jetbrains-mono-bold/index.html" target="_blank">Font (JetBrainsMono-Bold)</a>
             </div>
           </div>
           <div class="sample" data-search="Font (JetBrainsMono-Thin)" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html" target="_blank"
-                >Font (JetBrainsMono-Thin)</a
-              >
+              <a href="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html" target="_blank">Font (JetBrainsMono-Thin)</a>
             </div>
           </div>
           <div class="sample" data-search="Font, line, colors" style="display: flex">
@@ -133,17 +121,13 @@
           <div class="sample" data-search="Rethink high-level api" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/rethink-high-level-api/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/rethink-high-level-api/index.html" target="_blank"
-                >Rethink high-level api</a
-              >
+              <a href="/web-gpu-experiments/samples/rethink-high-level-api/index.html" target="_blank">Rethink high-level api</a>
             </div>
           </div>
           <div class="sample" data-search="Coord. system from top-left" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/top-left-coord-system/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/top-left-coord-system/index.html" target="_blank"
-                >Coord. system from top-left</a
-              >
+              <a href="/web-gpu-experiments/samples/top-left-coord-system/index.html" target="_blank">Coord. system from top-left</a>
             </div>
           </div>
         </div>
@@ -155,3 +139,4 @@
     <script type="module" src="./search/find-elements.ts"></script>
   </body>
 </html>
+  
