Render line of certain thinkness

--- a/output/index.html
+++ b/output/index.html
@@ -53,6 +53,10 @@
         <a href="/web-gpu-experiments/samples/plain-rectangle/index.html" target="_blank" class="explanation">Plain render</a>
       </div>
       <div class="sample">
+        <iframe src="/web-gpu-experiments/samples/render-line-of-certain-thickness/index.html"></iframe>
+        <a href="/web-gpu-experiments/samples/render-line-of-certain-thickness/index.html" target="_blank" class="explanation">Render line of certain thickness</a>
+      </div>
+      <div class="sample">
         <iframe src="/web-gpu-experiments/samples/rethink-high-level-api/index.html"></iframe>
         <a href="/web-gpu-experiments/samples/rethink-high-level-api/index.html" target="_blank" class="explanation">Rethink high-level api</a>
       </div>
