--- a/output/search.html
+++ b/output/search.html
@@ -118,6 +118,12 @@
               <a href="/web-gpu-experiments/samples/plain-rectangle/index.html" target="_blank">Plain render</a>
             </div>
           </div>
+          <div class="sample" data-search="Render line of certain thickness" style="display: flex">
+            <iframe src="/web-gpu-experiments/samples/render-line-of-certain-thickness/index.html"></iframe>
+            <div class="explanation">
+              <a href="/web-gpu-experiments/samples/render-line-of-certain-thickness/index.html" target="_blank">Render line of certain thickness</a>
+            </div>
+          </div>
           <div class="sample" data-search="Rethink high-level api" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/rethink-high-level-api/index.html"></iframe>
             <div class="explanation">
