Add new sample with points of certain size

--- a/output/search.html
+++ b/output/search.html
@@ -55,13 +55,17 @@
           <div class="sample" data-search="Coord. system from bottom-left" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/bottom-left-coord-system/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/bottom-left-coord-system/index.html" target="_blank">Coord. system from bottom-left</a>
+              <a href="/web-gpu-experiments/samples/bottom-left-coord-system/index.html" target="_blank"
+                >Coord. system from bottom-left</a
+              >
             </div>
           </div>
           <div class="sample" data-search="Send data points to shader" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/external-data/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/external-data/index.html" target="_blank">Send data points to shader</a>
+              <a href="/web-gpu-experiments/samples/external-data/index.html" target="_blank"
+                >Send data points to shader</a
+              >
             </div>
           </div>
           <div class="sample" data-search="Fixed size primitive" style="display: flex">
@@ -79,25 +83,33 @@
           <div class="sample" data-search="Font, background colors" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/font-and-backgroud-colors/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/font-and-backgroud-colors/index.html" target="_blank">Font, background colors</a>
+              <a href="/web-gpu-experiments/samples/font-and-backgroud-colors/index.html" target="_blank"
+                >Font, background colors</a
+              >
             </div>
           </div>
           <div class="sample" data-search="Font (JetBrainsMono-Regular)" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/font-jetbrains-mono/index.html" target="_blank">Font (JetBrainsMono-Regular)</a>
+              <a href="/web-gpu-experiments/samples/font-jetbrains-mono/index.html" target="_blank"
+                >Font (JetBrainsMono-Regular)</a
+              >
             </div>
           </div>
           <div class="sample" data-search="Font (JetBrainsMono-Bold)" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono-bold/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/font-jetbrains-mono-bold/index.html" target="_blank">Font (JetBrainsMono-Bold)</a>
+              <a href="/web-gpu-experiments/samples/font-jetbrains-mono-bold/index.html" target="_blank"
+                >Font (JetBrainsMono-Bold)</a
+              >
             </div>
           </div>
           <div class="sample" data-search="Font (JetBrainsMono-Thin)" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html" target="_blank">Font (JetBrainsMono-Thin)</a>
+              <a href="/web-gpu-experiments/samples/font-jetbrains-mono-thin/index.html" target="_blank"
+                >Font (JetBrainsMono-Thin)</a
+              >
             </div>
           </div>
           <div class="sample" data-search="Font, line, colors" style="display: flex">
@@ -121,19 +133,33 @@
           <div class="sample" data-search="Render line of certain thickness" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/render-line-of-certain-thickness/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/render-line-of-certain-thickness/index.html" target="_blank">Render line of certain thickness</a>
+              <a href="/web-gpu-experiments/samples/render-line-of-certain-thickness/index.html" target="_blank"
+                >Render line of certain thickness</a
+              >
+            </div>
+          </div>
+          <div class="sample" data-search="Render point of certain size" style="display: flex">
+            <iframe src="/web-gpu-experiments/samples/render-point-of-certain-size/index.html"></iframe>
+            <div class="explanation">
+              <a href="/web-gpu-experiments/samples/render-point-of-certain-size/index.html" target="_blank"
+                >Render point of certain size</a
+              >
             </div>
           </div>
           <div class="sample" data-search="Rethink high-level api" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/rethink-high-level-api/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/rethink-high-level-api/index.html" target="_blank">Rethink high-level api</a>
+              <a href="/web-gpu-experiments/samples/rethink-high-level-api/index.html" target="_blank"
+                >Rethink high-level api</a
+              >
             </div>
           </div>
           <div class="sample" data-search="Coord. system from top-left" style="display: flex">
             <iframe src="/web-gpu-experiments/samples/top-left-coord-system/index.html"></iframe>
             <div class="explanation">
-              <a href="/web-gpu-experiments/samples/top-left-coord-system/index.html" target="_blank">Coord. system from top-left</a>
+              <a href="/web-gpu-experiments/samples/top-left-coord-system/index.html" target="_blank"
+                >Coord. system from top-left</a
+              >
             </div>
           </div>
         </div>
@@ -145,4 +171,3 @@
     <script type="module" src="./search/find-elements.ts"></script>
   </body>
 </html>
-  
